--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 		</div>
 		<div class="form-container">
 			<form class="sign-in-form">
-				<input type="text" class="form-input">
-				<input type="text" class="form-input">
-				<p>Get New?</p>
+				<input type="text" class="form-input" placeholder="Enter Your Name">
+				<input type="text" class="form-input" placeholder="Enter Your Email">
+				<p>Get News?</p>
 				<label>Yes</label>
 				<input type="checkbox">
 				<label>No</label>
+				<button class="form-btn">Submit</button>
 			</form>
 			<div class="header">
 				<h1>Welcome To My Website</h1>
