--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="header">
 				<h1>Welcome To My Website</h1>
 			</div>
-			<div class="x-btn"></div>
+			<div class="x-btn">&#10008</div>
 		</div>
 	</div>
 
